# images

./: .dockerignore  .hadolint.yaml  AGENTS.md  LICENSE  README.md  cosign.pub  renovate.json
.github/workflows/: bake.yml  build.yml  conventional-commits.yml  renovate.yml  security.yml  test.yml
base/: Containerfile  versions.yaml
base/files/amd64/etc/portage/: make.conf
base/files/amd64/etc/portage/package.mask/: masked
base/files/amd64/etc/portage/package.use/dev-lang/: python
base/files/amd64/etc/portage/package.use/dev-vcs/: git
base/files/amd64/etc/portage/profile/: package.provided
base/files/amd64/etc/portage/repos.conf/: gentoo.conf
base/files/amd64/var/lib/portage/: world
busybox/: Containerfile  versions.yaml
gentoo-stage3/: Containerfile  versions.yaml
haproxy/: Containerfile  versions.yaml
haproxy-debian/: Containerfile  versions.yaml
images/buildx/: Containerfile.debian13  docker-bake.hcl
images/gentoo-stage3/: Containerfile  docker-bake.hcl
images/haproxy/: Containerfile.debian13  Containerfile.debian13-hardened  docker-bake.hcl
images/kubectl/: Containerfile.debian13  Containerfile.debian13-hardened  docker-bake.hcl
images/nginx-vts-exporter/: Containerfile  docker-bake.hcl
kubectl-debian/: Containerfile  versions.yaml
nginx-vts-exporter/: Containerfile
nginx-vts-exporter-container/: Containerfile  versions.yaml
slackagent/: .dockerignore  .env.example  .gitignore  Containerfile  README.md  pyproject.toml
slackagent/src/slackagent/: __init__.py  __main__.py  a2a_client.py  main.py  settings.py  slack_handlers.py
(+1 files in other folders)
